--- a/index.html
+++ b/index.html
@@ -43,6 +43,28 @@
         </ul>
       </div>
     </nav>
+
+    <section class="container-fluid px-0">
+      <div class="row align-items-center">
+        <div class="col-md-6">
+          <div
+            id="headingGroup"
+            class="d-none text-white text-center d-md-block mt-5"
+          >
+            <h1>MUSEUM<span>/</span>OF<span>/</span>CANDY</h1>
+            <h1>MUSEUM<span>/</span>OF<span>/</span>CANDY</h1>
+            <h1>MUSEUM<span>/</span>OF<span>/</span>CANDY</h1>
+            <h1>MUSEUM<span>/</span>OF<span>/</span>CANDY</h1>
+            <h1>MUSEUM<span>/</span>OF<span>/</span>CANDY</h1>
+            <h1>MUSEUM<span>/</span>OF<span>/</span>CANDY</h1>
+            <h1>MUSEUM<span>/</span>OF<span>/</span>CANDY</h1>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <img class="img-fluid" src="imgs/hand2.png" alt="" />
+        </div>
+      </div>
+    </section>
     <!-- Bootstrap JS Below -->
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
