Added more content

--- a/index.html
+++ b/index.html
@@ -65,6 +65,80 @@
         </div>
       </div>
     </section>
+
+    <section class="container-fluid px-0">
+      <div class="row align-items-center content">
+        <div class="col-md-6 order-2 order-md-1">
+          <img class="img-fluid" src="imgs/milk.png" alt="" />
+        </div>
+        <div class="col-md-6 text-center order-1 order-md-2">
+          <div class="row justify-content-center">
+            <div class="col-10 col-lg-8 blurb">
+              <h2>MUSEUM OF CANDY</h2>
+              <img
+                class="d-none d-lg-inline"
+                src="imgs/lolli_icon.png"
+                alt=""
+              />
+              <p class="lead">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi
+                vel dolor illum doloremque ab sit. Assumenda, similique
+                expedita. Dicta reiciendis, sed at asperiores nostrum ex non
+                itaque dolorum vero id!
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- another row -->
+      <div class="row align-items-center content">
+        <div class="col-md-6 order-2 order-md-1">
+          <img class="img-fluid" src="imgs/milk.png" alt="" />
+        </div>
+        <div class="col-md-6 text-center order-1 order-md-2">
+          <div class="row justify-content-center">
+            <div class="col-10 col-lg-8 blurb">
+              <h2>MUSEUM OF CANDY</h2>
+              <img
+                class="d-none d-lg-inline"
+                src="imgs/lolli_icon.png"
+                alt=""
+              />
+              <p class="lead">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi
+                vel dolor illum doloremque ab sit. Assumenda, similique
+                expedita. Dicta reiciendis, sed at asperiores nostrum ex non
+                itaque dolorum vero id!
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- another row -->
+      <div class="row align-items-center content">
+        <div class="col-md-6 order-2 order-md-1">
+          <img class="img-fluid" src="imgs/milk.png" alt="" />
+        </div>
+        <div class="col-md-6 text-center order-1 order-md-2">
+          <div class="row justify-content-center">
+            <div class="col-10 col-lg-8 blurb">
+              <h2>MUSEUM OF CANDY</h2>
+              <img
+                class="d-none d-lg-inline"
+                src="imgs/lolli_icon.png"
+                alt=""
+              />
+              <p class="lead">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi
+                vel dolor illum doloremque ab sit. Assumenda, similique
+                expedita. Dicta reiciendis, sed at asperiores nostrum ex non
+                itaque dolorum vero id!
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <!-- Bootstrap JS Below -->
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
